<resources>
    <string name="app_name">IReportGrp8</string>

    <!-- user registration activity -->
    <string name="str_registration">Update Profile</string>
    <string name="str_screen_name">Enter Screen Name</string>
    <string name="str_first_name">Enter First Name</string>
    <string name="str_last_name"> Enter Last Name</string>
    <string name="str_address">Address:</string>
    <string name="str_address_street">Enter Street</string>
    <string name="str_address_aptno">Enter Apt No</string>
    <string name="str_address_city">Enter City</string>
    <string name="str_address_zip">Enter Zip</string>
    <string name="btn_submit">Submit</string>
    <string name="update_profile">Profile has been successfully updated</string>

    <!-- menu items -->
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_profile">Update Profile</string>
    <string name="menu_item_logout">Logout</string>
    <string name="title_activity_user_settings">UserSettings</string>

    <!-- user setting activity -->
    <string name="str_littering_report_conf">Littering Report Confirmation</string>
    <string name="str_littering_report_status_conf">Littering Report Status Change Confirmation</string>
    <string name="str_littering_report_anonymous">Anonymous Reporting</string>
    <string name="toast_settings_updated">Settings Updated</string>


    <!-- Firebase keys -->
    <string name="key_public_users">publicusers</string>
    <string name="key_public_user_settings">publicusersettings</string>


    <!-- Facebook keys -->
    <string name="facebook_app_id">1742999886018932</string>

    <string name="options_menu_choose_option">What would you like to do?</string>
    <string name="pic_button">Take a picture of the littering</string>
    <string name="report_button">Describe what you see</string>
    <string name="litter_description_q">Give a short description of the litter</string>
    <string name="litter_size">Size</string>
    <string name="litter_severity">Severity</string>
    <string name="submit_button">Submit</string>
    <string name="title_activity_city_official">Residents Reports</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Report Title, Date, ...</string>
    <string name="action_settings">dummy</string>
    <string name="menu_search">search</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">Please join me for a friendly chat</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">Friendly Chat Invite</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>

    <string name="spinner_title">Status:</string>
    <string-array name="official_status_changes">
        <item>Still There</item>
        <item>Removal Claimed</item>
    </string-array>

    <string-array name="report_status_array">
        <item>Report Status</item>
        <item>Still There</item>
        <item>Removal Claimed</item>
        <item>Removal Confirmed</item>
    </string-array>

    <string-array name="severity_array">
        <item>Priority Level</item>
        <item>Minor</item>
        <item>Medium</item>
        <item>Urgent</item>
    </string-array>

    <string name="title_activity_maps">Map</string>
    <string name="apply_underlined"> <u>Apply</u> </string>
    <string name="cancel_underlined"> <u>Cancel</u> </string>

    <string name="status_prompt">Choose a status</string>

    <string-array name="status_array">
        <item>Still There</item>
        <item>Removal Confirmed</item>
    </string-array>
</resources>
