<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/options_menu_choose_option"
        android:textSize="21dp"
        android:padding="24dp"
        android:gravity="center"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="0.5">

        <Button
            android:id="@+id/pic_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/pic_button"
            android:drawableRight="@mipmap/camera1"
            android:drawablePadding="15dp"
            android:padding="15dp"
            />
        <Button
            android:id="@+id/report_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/report_button"
            android:drawableRight="@mipmap/report1"
            android:drawablePadding="4dp"
            android:padding="15dp"/>
        >
    </LinearLayout>
</LinearLayout>