<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1.9">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Title"
            android:textSize="19dp"
            android:padding="2dp"
            android:layout_weight="0.4"/>
        <EditText
            android:id="@+id/litter_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="19dp"
            android:padding="2dp"
            android:layout_weight="0.6"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1.9">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/litter_description_q"
            android:textSize="19dp"
            android:padding="2dp"
            android:layout_weight="0.4"/>
        <EditText
            android:id="@+id/litter_description_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="19dp"
            android:padding="2dp"
            android:layout_weight="0.6"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1.3">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/litter_size"
            android:textSize="19dp"
            android:padding="2dp"
            android:layout_weight="0.1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.9">
            <RadioGroup
                android:id="@+id/radio_group_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/radio_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="small"
                    android:checked="false"
                    android:textSize="19dp"
                    android:padding="0dp"
                    android:layout_weight="1"/>

                <RadioButton
                    android:id="@+id/radio_median"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="med"
                    android:checked="false"
                    android:textSize="19dp"
                    android:padding="0dp"
                    android:layout_weight="1"/>
                <RadioButton
                    android:id="@+id/radio_large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="large"
                    android:checked="false"
                    android:textSize="19dp"
                    android:padding="0dp"
                    android:layout_weight="1"/>
                <RadioButton
                    android:id="@+id/radio_extra"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="extra"
                    android:checked="false"
                    android:textSize="19dp"
                    android:padding="0dp"
                    android:layout_weight="1"/>

            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1.3">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/litter_severity"
            android:textSize="19dp"
            android:padding="2dp"
            android:layout_weight="0.1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.9">
            <RadioGroup
                android:id="@+id/radio_group_severity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">
                <RadioButton
                    android:id="@+id/radio_minor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="minor"
                    android:checked="false"
                    android:textSize="19dp"
                    android:padding="2dp"
                    android:layout_weight="1"/>
                <RadioButton
                    android:id="@+id/radio_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="medium"
                    android:checked="false"
                    android:textSize="19dp"
                    android:padding="2dp"
                    android:layout_weight="1"/>
                <RadioButton
                    android:id="@+id/radio_urgent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="urgent"
                    android:checked="false"
                    android:textSize="19dp"
                    android:padding="2dp"
                    android:layout_weight="1"/>
            </RadioGroup>
        </LinearLayout>
        <Button
            android:id="@+id/report_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/submit_button"
            android:drawablePadding="4dp"
            android:padding="15dp"
            android:layout_weight="0.01"/>
    </LinearLayout>

</LinearLayout>